<resources>
    <string name="app_name">AppTransfusiones</string>
    <string name="textoLogin">Iniciar sesión</string>
    <string name="registrar">Registrar usuario</string>
    <string name="forgottenPassword">¿Olvidaste la contraseña?</string>
    <string name="introduce_contraseña">Introduce una contraseña</string>
    <string name="repite">Repite la contraseña</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="powered_by">Powered by</string>
    <string name="pregunta_registrar"><u>¿No tienes una cuenta? Regístrate aquí</u></string>
    <string name="pregunta2"><u>¿Ya tienes una cuenta? Inicia sesión aquí</u></string>
    <string name="nuevaContraseña">Introduce una nueva contraseña</string>
    <string name="actualizarContraseña">Actualizar contraseña</string>
    <string name="recuperar">Recuperar</string>
    <string name="nombreyapellidos">Introduce nombre y apellidos</string>
    <string name="cita">Próxima cita:</string>
    <string name="verDetalle">Ver detalles</string>
    <string name="dondeEstamos">Donde estamos esta semana:</string>
    <string name="cambiarIdioma">Cambiar idioma</string>
    <string name="citas">Citas</string>
    <string name="perfil">Perfil</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="eventos">Eventos</string>
    <string name="calendario">Calendario</string>
    <string name="ranking">Ranking</string>
    <string name="manual">Manual</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="eligeIdioma">Elige un idioma</string>
    <string name="formatoNoValido">El formato del email introducido no es válido.</string>
    <string name="introduceEmailDeNuevo">Por favor, introduce de nuevo un email.</string>
    <string name="botonokAlertDialog">Continuar</string>
    <string name="botonerrorAlertDialog">Cancelar</string>
    <string name="exitoEmail">Email enviado con éxito, pulsa para continuar.</string>
    <string name="errorEmailPassword">Email o contraseña incorrectos.</string>
    <string name="credenciales">Por favor, revisa tus credenciales e inténtalo de nuevo.</string>
    <string name="rellenarCampos">Rellena todos los campos</string>
    <string name="errorEmail">Por favor, introduce un formato de email válido.</string>
    <string name="coincidenPasswords">Las contraseñas no coinciden.</string>
    <string name="samePasswords">Por favor, introduce una contraseña de modo que las dos sean iguales.</string>
    <string name="exitoRegistro">Registro realizado con éxito, pulsa para continuar.</string>
    <string name="diadelacita">Día de la cita</string>
    <string name="error">Error</string>
    <string name="exito">Éxito</string>
    <string name="agregarcita">+ Agregar cita</string>
    <string name="proximascitas">Próximas citas:</string>
    <string name="seleccionarfecha">Seleccionar fecha</string>
    <string name="seleccionarhora">Seleccionar hora</string>
    <string name="telefonocita">Teléfono de la cita</string>
    <string name="elegidocita">Ha elegido cita para el día</string>
    <string name="a_las">a las</string>
    <string name="citaguardada">Se ha guardado su cita correctamente</string>
    <string name="introduceTelefono">Introduce un número de teléfono</string>
    <string name="errorTelefono">Introduce un número de teléfono válido</string>
    <string name="tituloNotificacion">BDP - Se ha guardado su cita correctamente</string>
    <string name="modificarDatosPersonales">Modificar datos personales</string>
    <string name="aplicarCambios">Aplicar cambios</string>
    <string name="modificarUsuario">Modificar usuario</string>
    <string name="modificarUsuarioExito">Modificación realizada con éxito, pulsa para continuar.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>