<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPassword">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_initsesion" />

    <TextView
        android:id="@+id/textViewActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_normal"
        android:text="@string/actualizarContraseña"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/corner_et"
        android:drawableStart="@drawable/vector_asset_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_normal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColor="@color/charColor"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold"
        app:helperTextTextColor="@color/redSecundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActualizar">

    </EditText>

    <Button
        android:id="@+id/buttonRecuperar"
        android:layout_width="240dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/redSecundario"
        android:fontFamily="@font/roboto_normal"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/recuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/tv_powered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_normal"
        android:text="@string/powered_by"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecuperar" />

    <ImageView
        android:id="@+id/ivAtos"
        android:layout_width="78dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonRecuperar"
        app:srcCompat="@drawable/atos_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>