<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InitSesionActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_initsesion" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_normal"
        android:text="@string/textoLogin"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/corner_et"
        android:drawableStart="@drawable/vector_asset_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_normal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColor="@color/charColor"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold"
        app:helperTextTextColor="@color/redSecundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin">

    </EditText>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="329dp"
            android:layout_height="51dp"
            android:background="@drawable/corner_et"
            android:drawableStart="@drawable/vector_asset_lock"
            android:drawablePadding="16dp"
            android:ems="10"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/charColor"
            android:textColorHint="@color/hintColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <ImageView
            android:id="@+id/hidePassword"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="5dp"
            android:paddingEnd="16dp"
            android:paddingRight="2dp"
            android:src="@drawable/vector_asset_eye"
            app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/editTextPassword">

        </ImageView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:text="@string/forgottenPassword"
        android:textColor="@color/forgotten"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="255dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_normal"
        android:backgroundTint="@color/redSecundario"
        android:textStyle="bold"
        android:text="@string/textoLogin"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <TextView
        android:id="@+id/tv_powered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_normal"
        android:text="@string/powered_by"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageView
        android:id="@+id/ivAtos"
        android:layout_width="78dp"
        android:layout_height="73dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_preguntar"
        app:srcCompat="@drawable/atos_logo" />

    <TextView
        android:id="@+id/tv_preguntar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_normal"
        android:text="@string/pregunta_registrar"
        android:textColor="@color/forgotten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>