<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.fragments.PerfilFragment">

    <TextView
        android:id="@+id/tv_hola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Hola, "
        android:textColor="@color/hintColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        tools:text="Fragment de perfil"
        android:textColor="@color/hintColor"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hola">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="407dp"
        android:layout_height="307dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />

    <Button
        android:id="@+id/buttonLanguage"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/redSecundario"
        android:fontFamily="@font/roboto_normal"
        android:textStyle="bold"
        android:text="@string/cambiarIdioma"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintVertical_bias="0.239" />

    <TextView
        android:id="@+id/tv_proximacita"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/cita"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/hintColor"
        android:fontFamily="@font/roboto_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="358dp"
        android:layout_height="127dp"
        android:layout_marginTop="12dp"
        android:animateLayoutChanges="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_proximacita">

        <TextView
            android:id="@+id/tv_nombre_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_normal"
            android:text="Antiguo Hospital"
            android:textColor="@color/hintColor"
            android:layout_marginStart="145dp"
            android:layout_marginTop="11dp"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/tv_direccion_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_normal"
            android:text="Carrer de l´Hospital, 46001"
            android:textColor="@color/hintColor"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginStart="145dp">

        </TextView>

        <TextView
            android:id="@+id/tv_ciudad_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_normal"
            android:text="Valencia"
            android:textColor="@color/hintColor"
            android:textStyle="bold"
            android:layout_marginTop="57dp"
            android:layout_marginStart="145dp">

        </TextView>

        <LinearLayout
            android:id="@+id/linear_layout_vertical"
            android:layout_height="110dp"
            android:layout_width="1dp"
            android:orientation="vertical"
            android:layout_marginTop="9dp"
            android:layout_marginStart="120dp"
            android:background="@color/hintColor">

        </LinearLayout>

        <TextView
            android:id="@+id/tv_fecha_cita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">

        </TextView>

        <TextView
            android:id="@+id/tv_hora_cita"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">

        </TextView>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="150dp"
            android:layout_height="41dp"
            android:layout_marginStart="145dp"
            android:layout_marginTop="75dp"
            android:textStyle="bold"
            android:backgroundTint="@color/redSecundario"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/verDetalle"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>